# LuthiScope

./: .env.example  .gitignore  LICENSE  LuthiScope.spec  README.md  conftest.py  pyproject.toml
docs/: EMIT_BATCH_1.md  EMIT_BATCH_2.md  EXPLANATION_LAYER.md  IMPLEMENTATION_PLAN.md  METRICS_CONTRACT.md  METRICS_ROADMAP.md  PACKAGING.md  RUN_REGISTRY.md  TRAINING_WELFARE.md
frontend/: app.js  index.html  styles.css
frontend/assets/: fluid.js
luthiscope/: __init__.py  __main__.py  config.py  desktop.py
luthiscope/contract/: __init__.py  cognition.py  training.py
luthiscope/ingest/: __init__.py  parser.py  tailer.py
luthiscope/server/: __init__.py  app.py  discovery.py
luthiscope/store/: __init__.py  db.py
packaging/: entry.py
scripts/: fake_live.py
tests/: test_discovery.py  test_models.py  test_roundtrip.py  test_server_nonfinite.py
tests/fixtures/: cognition_action_log.sample.jsonl  run_config.sample.json  training_log.sample.jsonl
