[project]
name = "luthiscope"
version = "0.1.0"
description = "Real-time observation & control console for the Luthi living-weights model."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Phase 1 adds: fastapi, uvicorn[standard], watchfiles

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luthiscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
