[project]
name = "luthiscope"
version = "0.1.0"
description = "Real-time observation & control console for the Luthi living-weights model."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn[standard]",   # includes websockets
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx"]          # httpx for the TestClient tests
desktop = ["pywebview"]               # native-window app mode (else falls back to browser)
packaging = ["pyinstaller", "pywebview"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luthiscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
